2014-08-28  Per Bothner  <per@bothner.com>

	* Type.java (isCompatibleWithValue): Change interpretation of return
	value so 2 means no run-time conversion/check needed.
	* ClassType.java (isCompatibleWithValue): New overload.
	* ArrayType.java (isCompatibleWithValue): New overload.
	* TypeVariable.java (isCompatibleWithValue): New overload.

2014-08-27  Per Bothner  <per@bothner.com>

	* ClassType.java (isSubclass, compare): Since toStringType is no
	longer a ClassType, remove some dead code.

2014-08-21  Per Bothner  <per@bothner.com>

	* SwitchState.java (finish): Update, since defaultLabel is
	now allocated in constructor.

2014-08-12  Andrea Bernardini <andrebask@gmail.com>

        * SwitchState.java (finish): Add code to avoid
	possible integer overflows.

2014-08-11  Per Bothner  <per@bothner.com>

	* Type.java (javalangCharacterType): New static field.

2014-07-10  Andrea Bernardini <andrebask@gmail.com>

        * SwitchState.java: code readability improvements.

2014-07-29  Per Bothner  <per@bothner.com>

	Add support for generating MethodHandle constant pool entries.
	* CpoolMethodHandle.java: New constructor.
	(hashCode, write): New methods.
	* ConstantPool.java (addMethodHandle): New methdods.
	* CodeAttr.java (emitPushMethodHandle): New method.
	* Type.java (javalanginvokeMethodHandleType): New field.

2014-07-27  Per Bothner  <per@bothner.com>

	* SpecialObjectType.java: New class that extends ObjectType.
	Some properties moved from gnu.kawa.lispexpr.LangObjType.
	* Makefile.am: Update accordingly.
	* ObjectType.java (getImplementationType): No longer needed.
	* Type.java (nullType, toStringType): Now are SpecialObjectType.

2014-07-10  Per Bothner  <per@bothner.com>

	Fix for Savannah bug #42713: "MalformedParameterizedTypeException
	thrown when compiling".  Actually 2 fixes: (1) Make the call
	getGenericType lazy (2) don't addField if field is private.
	* Location.java (type): Make private.
	(getType): Make non-final.