@@ -1,3 +1,8 @@
+2014-11-03  Per Bothner  <per@bothner.com>
+
+	* CodeAttr.java (disAssemble): Handle invoke dynamic.
+	* CpoolInvokeDynamic.java (print): Remove excess space.
+
 2014-08-28  Per Bothner  <per@bothner.com>
 
 	* Type.java (isCompatibleWithValue): Change interpretation of return
